Submission files added

--- a/Src/RF.ipynb
+++ b/Src/RF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "c3055ad7-483a-4013-bfb6-d281aeef047d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "7610dd92-6567-4f53-afa9-29e65e372e87",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "8a009b38-27d9-4ea3-af77-8ad171d8a0dc",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "9779e3df-53f8-4d00-8dea-b148a10a7fa1",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "74045a72-53ca-41bd-94f8-319c20c9af8f",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "5a2b0408-0a65-474c-b3a8-cf7d20c287aa",
    "metadata": {},
    "outputs": [
@@ -212,30 +212,7 @@
       "Cross-validated MAPE (transformed): 3.55%\n",
       "Test MAPE (original scale): 0.00%\n",
       "\n",
-      "🔹 Target: BlendProperty6\n",
-      "Best params: {'max_depth': 20, 'n_estimators': 200}\n",
-      "Cross-validated MAPE (transformed): 166.24%\n",
-      "Test MAPE (original scale): 2.03%\n",
-      "\n",
-      "🔹 Target: BlendProperty7\n",
-      "Best params: {'max_depth': 20, 'n_estimators': 200}\n",
-      "Cross-validated MAPE (transformed): 268.12%\n",
-      "Test MAPE (original scale): 1.69%\n",
-      "\n",
-      "🔹 Target: BlendProperty8\n",
-      "Best params: {'max_depth': 20, 'n_estimators': 200}\n",
-      "Cross-validated MAPE (transformed): 119.17%\n",
-      "Test MAPE (original scale): 3.29%\n",
-      "\n",
-      "🔹 Target: BlendProperty9\n",
-      "Best params: {'max_depth': 20, 'n_estimators': 200}\n",
-      "Cross-validated MAPE (transformed): 429.40%\n",
-      "Test MAPE (original scale): 19.62%\n",
-      "\n",
-      "🔹 Target: BlendProperty10\n",
-      "Best params: {'max_depth': 20, 'n_estimators': 200}\n",
-      "Cross-validated MAPE (transformed): 118.70%\n",
-      "Test MAPE (original scale): 0.71%\n"
+      "🔹 Target: BlendProperty6\n"
      ]
     }
    ],
