--- a/Src/LightGBM.ipynb
+++ b/Src/LightGBM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "1ad60279-59c3-432e-a8ab-cc8c785e74d9",
    "metadata": {},
    "outputs": [],
@@ -18,14 +18,14 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_absolute_percentage_error\n",
     "from sklearn.multioutput import MultiOutputRegressor\n",
-    "from sklearn.preprocessing import StandardScaler, PowerTransformer,QuantileTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, PowerTransformer,QuantileTransformer,RobustScaler\n",
     "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
     "from lightgbm import LGBMRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "d7e419e2-4dc8-43ee-a1db-d6f3a7b04c85",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "8a503bfe-a5e0-4283-afaa-60f9c49acc0c",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,31 @@
     "\n",
     "# Combine\n",
     "data_with_weighted = pd.concat([train_df[base_features], pd.DataFrame(weighted_data)], axis=1)\n",
-    "data_with_weighted = data_with_weighted.copy()  # De-fragmented copy"
+    "data_with_weighted = data_with_weighted.copy()  # De-fragmented copy\n",
+    "scaler = RobustScaler()\n",
+    "scaled_features = scaler.fit_transform(data_with_weighted)\n",
+    "scaled_df_features = pd.DataFrame(scaled_features, columns=data_with_weighted.columns)\n",
+    "\n",
+    "\n",
+    "pt = PowerTransformer(method='yeo-johnson')\n",
+    "transformed_targets_df = pd.DataFrame(pt.fit_transform(train_df[targets]), columns=targets, index=train_df.index)\n",
+    "\n",
+    "# Initial feature selection using Random Forest feature importance\n",
+    "top_features = {}\n",
+    "for target in targets:\n",
+    "    X = scaled_df_features\n",
+    "    y = transformed_targets_df[target]\n",
+    "    rf_initial = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "    rf_initial.fit(X, y)\n",
+    "    feature_importance = pd.Series(rf_initial.feature_importances_, index=scaled_df_features.columns).sort_values(ascending=False)\n",
+    "    top_features[target] = feature_importance.head(20).index.tolist()\n",
+    "\n",
+    "# GridSearchCV\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200],\n",
+    "    'max_depth': [10, 20,]\n",
+    "\n",
+    "}\n"
    ]
   },
   {
